@@ -18,6 +18,7 @@ package org.gradle.plugin.devel.plugins;
 
 import com.google.common.collect.Sets;
 import org.gradle.api.Action;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.NonNullApi;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
@@ -29,7 +30,7 @@ import org.gradle.api.artifacts.dsl.DependencyHandler;
 import org.gradle.api.file.CopySpec;
 import org.gradle.api.file.FileCollection;
 import org.gradle.api.file.FileCopyDetails;
-import org.gradle.api.internal.artifacts.dsl.dependencies.DependencyFactory;
+import org.gradle.api.internal.artifacts.dsl.dependencies.DependencyFactoryInternal;
 import org.gradle.api.internal.artifacts.ivyservice.projectmodule.ProjectPublicationRegistry;
 import org.gradle.api.internal.plugins.PluginDescriptor;
 import org.gradle.api.internal.project.ProjectInternal;
@@ -58,6 +59,7 @@ import org.gradle.plugin.devel.tasks.ValidatePlugins;
 import org.gradle.plugin.use.PluginId;
 import org.gradle.plugin.use.internal.DefaultPluginId;
 import org.gradle.plugin.use.resolve.internal.local.PluginPublication;
+import org.gradle.process.CommandLineArgumentProvider;
 
 import javax.annotation.Nullable;
 import java.io.File;
@@ -66,6 +68,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -207,8 +210,8 @@ public class JavaGradlePluginPlugin implements Plugin<Project> {
 
     private static boolean excludeGradleApi(ComponentIdentifier componentId) {
         if (componentId instanceof OpaqueComponentIdentifier) {
-            DependencyFactory.ClassPathNotation classPathNotation = ((OpaqueComponentIdentifier) componentId).getClassPathNotation();
-            return classPathNotation != DependencyFactory.ClassPathNotation.GRADLE_API && classPathNotation != DependencyFactory.ClassPathNotation.LOCAL_GROOVY;
+            DependencyFactoryInternal.ClassPathNotation classPathNotation = ((OpaqueComponentIdentifier) componentId).getClassPathNotation();
+            return classPathNotation != DependencyFactoryInternal.ClassPathNotation.GRADLE_API && classPathNotation != DependencyFactoryInternal.ClassPathNotation.LOCAL_GROOVY;
         }
         return true;
     }
@@ -379,10 +382,14 @@ public class JavaGradlePluginPlugin implements Plugin<Project> {
             Set<SourceSet> testSourceSets = extension.getTestSourceSets();
             project.getNormalization().getRuntimeClasspath().ignore(PluginUnderTestMetadata.METADATA_FILE_NAME);
 
-            project.getTasks().withType(Test.class).configureEach(test -> test.getInputs()
-                .files(pluginClasspathTask.get().getPluginClasspath())
-                .withPropertyName("pluginClasspath")
-                .withNormalizer(ClasspathNormalizer.class));
+            project.getTasks().withType(Test.class).configureEach(test -> {
+                test.getInputs()
+                    .files(pluginClasspathTask.get().getPluginClasspath())
+                    .withPropertyName("pluginClasspath")
+                    .withNormalizer(ClasspathNormalizer.class);
+
+                test.getJvmArgumentProviders().add(new AddOpensCommandLineArgumentProvider(test));
+            });
 
             for (SourceSet testSourceSet : testSourceSets) {
                 String implementationConfigurationName = testSourceSet.getImplementationConfigurationName();
@@ -390,6 +397,26 @@ public class JavaGradlePluginPlugin implements Plugin<Project> {
                 String runtimeOnlyConfigurationName = testSourceSet.getRuntimeOnlyConfigurationName();
                 dependencies.add(runtimeOnlyConfigurationName, project.getLayout().files(pluginClasspathTask));
             }
+        }
+    }
+
+    /**
+     * Provides an {@code --add-opens} flag for {@code java.base/java.lang} if the JVM version
+     * a given test task is running does not allow reflection of JDK internals by default.
+     * Needed when using ProjectBuilder in tests.
+     */
+    private static class AddOpensCommandLineArgumentProvider implements CommandLineArgumentProvider {
+        private final Test test;
+
+        private AddOpensCommandLineArgumentProvider(Test test) {
+            this.test = test;
+        }
+
+        @Override
+        public Iterable<String> asArguments() {
+            return test.getJavaVersion().isCompatibleWith(JavaVersion.VERSION_1_9)
+                ? Collections.singletonList("--add-opens=java.base/java.lang=ALL-UNNAMED")
+                : Collections.emptyList();
         }
     }
 
